--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "framer-motion": "^5.5.4",
     "next": "12.0.7",
     "react": "17.0.2",
