--- a/dashboard-emji/package.json
+++ b/dashboard-emji/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.0.0",
     "@strapi/strapi": "4.0.0",
     "pg": "^8.7.1",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "strapi-provider-upload-cloudinary": "^3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
