--- a/dashboard-emji/package.json
+++ b/dashboard-emji/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.0.0",
     "@strapi/plugin-users-permissions": "4.0.0",
+    "@strapi/provider-upload-cloudinary": "^4.0.0",
     "@strapi/strapi": "4.0.0",
     "pg": "^8.7.1",
     "pg-connection-string": "^2.5.0",
-    "sqlite3": "5.0.2",
-    "strapi-provider-upload-cloudinary": "^3.6.8"
+    "sqlite3": "5.0.2"
   },
   "author": {
     "name": "A Strapi developer"
