--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.22.2",
     "react-intersection-observer": "^8.33.1",
     "react-scroll-parallax": "^2.4.1",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
