--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "dateformat": "^5.0.2",
     "framer-motion": "^5.5.4",
     "next": "12.0.7",
     "react": "17.0.2",
