--- a/dashboard-emji/package.json
+++ b/dashboard-emji/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "dev": "strapi develop",
+    "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
@@ -13,10 +13,10 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.0.0",
     "@strapi/plugin-users-permissions": "4.0.0",
-    "@strapi/provider-upload-cloudinary": "^4.0.0",
+    "@strapi/provider-upload-cloudinary": "4.0.0",
     "@strapi/strapi": "4.0.0",
-    "pg": "^8.7.1",
-    "pg-connection-string": "^2.5.0",
+    "pg": "8.7.1",
+    "pg-connection-string": "2.5.0",
     "sqlite3": "5.0.2"
   },
   "author": {
